# agentbraid

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  rfc.yml
.github/workflows/: ci.yml
docs/: getting-started.md  host-walkthrough.md  provider-policy.md  routing.md  sample-run.md  security-boundaries.md  troubleshooting.md  worktrees.md
docs/releases/: v0.1.0-alpha.1-checklist.md  v0.1.0-alpha.1.md  v0.1.0-alpha.2.md  v0.2.0-alpha.1.md  v0.2.0-alpha.2.md  v0.2.0-alpha.3.md
docs/rfcs/: README.md
examples/: host-result.json  redacted-run.json  start-run.json
scripts/: check_distribution.py  check_licenses.py
src/agentbraid/: __init__.py  __main__.py  cli.py  config.py  dashboard.py  errors.py  installer.py  model_intelligence.py  models.py  redaction.py  router.py  security.py  server.py  service.py  store.py  worktrees.py
src/agentbraid/dashboard_assets/: __init__.py  app.css  app.js  index.html  locales.json
src/agentbraid/model_data/: __init__.py  manifest-v1.json
src/agentbraid/providers/: __init__.py  base.py  codex.py
tests/: test_cli.py  test_codex_provider.py  test_config.py  test_dashboard.py  test_examples.py  test_installer.py  test_model_intelligence.py  test_models.py  test_router.py  test_security.py  test_server.py  test_service.py  test_store.py  test_worktrees.py
