[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "agentbraid"
version = "0.1.0a1"
description = "Braid multiple agents into one accountable workflow."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "xuu33030" },
]
keywords = [
  "agents",
  "codex",
  "mcp",
  "orchestration",
  "worktree",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
]
dependencies = [
  "mcp>=1.13,<2",
  "platformdirs>=4.2,<5",
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.13,<2",
  "pip-audit>=2.7,<3",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[project.scripts]
agentbraid = "agentbraid.cli:main"

[project.urls]
Documentation = "https://github.com/xuu33030/agentbraid#readme"
Issues = "https://github.com/xuu33030/agentbraid/issues"
Repository = "https://github.com/xuu33030/agentbraid"

[tool.hatch.build.targets.wheel]
packages = ["src/agentbraid"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["agentbraid"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["agentbraid"]

